Added Course Components

--- a/src/index.css
+++ b/src/index.css
@@ -51,6 +51,36 @@ body {
   transform: scale(0.98);
 }
 
+.course {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+
+.course.reminder {
+  border-left: 5px solid green;
+}
+
+.course h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.accordion__button {
+  display: block;
+  width: 100%;
+  padding: 15px;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #333333;
+  color: #ffffff;
+  text-align: left;
+  transition: background 0.2s;
+}
+
 footer {
   margin-top: 30px;
   text-align: center;
