--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 500px;
-  border: 1px solid steelblue;
+  /* border: 1px solid steelblue; */
   padding: 30px;
   border-radius: 5px;
 }
@@ -43,6 +43,26 @@ body {
   font-family: inherit;
 }
 
+.btn-assessment {
+  display: inline-block;
+  background: rgb(119, 221, 119);
+  color: #fff;
+  border: solid;
+  padding: 10px 20px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: "steelblue";
+  cursor: pointer;
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
 .btn:focus {
   outline: none;
 }
@@ -53,9 +73,9 @@ body {
 
 .course {
   background: #f4f4f4;
-  margin: 5px;
+  margin: 0px;
   padding: 10px 20px;
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 
 .course.reminder {
@@ -74,11 +94,55 @@ body {
   padding: 15px;
   border: none;
   outline: none;
-  cursor: pointer;
+  /* cursor: pointer; */
   background: #333333;
   color: #ffffff;
   text-align: left;
   transition: background 0.2s;
+}
+
+.accordion__button::after {
+  content: "\25be";
+  float: right;
+  transform: scale(1.5);
+}
+
+.accordion__button--active {
+  background: #555555;
+}
+
+.accordion__button--active::after {
+  content: "\25b4";
+}
+
+.accordion__content {
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 0.2s;
+
+  padding: 0 15px;
+  font-family: sans-serif;
+  background: #eeeeee;
+}
+
+.add-form {
+  margin-bottom: 40px;
+}
+
+.form-control {
+  margin: 20px 0;
+}
+
+.form-control label {
+  display: block;
+}
+
+.form-control input {
+  width: 100%;
+  height: 40px;
+  margin: 5px;
+  padding: 3px 7px;
+  font-size: 17px;
 }
 
 footer {
