--- a/src/index.css
+++ b/src/index.css
@@ -16,16 +16,19 @@ body {
   margin: 30px auto;
   overflow: auto;
   min-height: 500px;
-  /* border: 1px solid steelblue; */
   padding: 30px;
   border-radius: 5px;
 }
 
-.header {
+header {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+  background-color: rgb(135, 189, 252);
+  height: 150px;
+  border-radius: 20px;
+  font-size: 20px;
 }
 
 .btn {
@@ -72,7 +75,7 @@ body {
 }
 
 .course {
-  background: #f4f4f4;
+  background: rgb(182, 209, 252);
   margin: 0px;
   padding: 10px 20px;
   /* cursor: pointer; */
@@ -96,6 +99,7 @@ body {
   outline: none;
   /* cursor: pointer; */
   background: #333333;
+  border-radius: 10px;
   color: #ffffff;
   text-align: left;
   transition: background 0.2s;
@@ -122,7 +126,7 @@ body {
 
   padding: 0 15px;
   font-family: sans-serif;
-  background: #eeeeee;
+  background: rgb(182, 209, 252);
 }
 
 .add-form {
@@ -155,7 +159,7 @@ body {
 }
 
 .assessment-control input {
-  width: 25%;
+  width: 32.1%;
   right: 0px;
   height: 40px;
   margin: 5px;
@@ -166,9 +170,25 @@ body {
 
 .assessment-block {
   display: inline-block;
-  width: 30%;
+  width: 32.1%;
   text-align: center;
   background: #000;
+  color: #fff;
+  border: solid;
+  padding: 10px 50px;
+  margin: 5px;
+  border-radius: 5px;
+  background-color: "steelblue";
+  text-decoration: none;
+  font-size: 15px;
+  font-family: inherit;
+}
+
+.grade-block {
+  display: inline-block;
+  width: 100%;
+  text-align: center;
+  background: rgb(50, 160, 168);
   color: #fff;
   border: solid;
   padding: 10px 50px;
