--- a/src/index.css
+++ b/src/index.css
@@ -9,9 +9,11 @@
 body {
   font-family: "Poppins", sans-serif;
   background-color: rgb(182, 209, 252);
-  background-image: url("./img/DSC02391.JPG");
+  /* background-image: url("./img/DSC02391.JPG");
   background-size: 150%;
-  background-position: center;
+  background-position: center; */
+  background-image: linear-gradient(120deg, #65bcf6, #b385fd);
+  background-size: 2000px 2000px;
 }
 
 .container {
@@ -104,7 +106,7 @@ header {
   padding: 15px;
   border: solid;
   outline: none;
-  /* cursor: pointer; */
+  cursor: pointer;
   background: #333333;
   border-radius: 10px;
   color: #ffffff;
@@ -207,6 +209,11 @@ header {
   text-decoration: none;
   font-size: 15px;
   font-family: inherit;
+}
+
+.trash-btn {
+    color: rgb(255, 150, 138);
+    cursor: pointer;
 }
 
 footer {
