--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -4,8 +4,15 @@
   background-color: #060b26;
   height: 80px;
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
+}
+
+.welcome {
+  color: white;
+  margin-right: 2rem;
+  font-weight: bold;
+  font-size: 20px;
 }
 
 .top-nav {
